charity section quick spacing fix

--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ bring monkey gif up (monkey jumps down at 813 px
 
 @media (max-width:1024px){
     .Charity{
-        height: 680px;
+        height: 630px;
         flex-wrap: wrap;
     }
     .Charity .Text-Section{
@@ -583,7 +583,7 @@ bring monkey gif up (monkey jumps down at 813 px
     }
 
     .Charity .Image-Section .monke-pic{
-        height: 225px;
+        height: 235px;
     }
 }
 
